--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.0",
     "inquirer": "^9.2.7",
     "mysql2": "^2.0.1",
+    "nba-color": "^1.4.1",
     "sequelize": "^5.22.5",
     "uuid": "^9.0.0"
   },
