--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^4.0.1",
     "connect-session-sequelize": "^6.1.1",
+    "dayjs": "^1.11.9",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "express-handlebars": "^3.1.0",
